--- a/style.css/style.css
+++ b/style.css/style.css
@@ -60,7 +60,7 @@ font-family: 'Comfortaa', cursive;
 background-color: transparent;
 }
 
-.två {
+.fyra {
 color: rgba(18, 237, 113, 0.94);
 font-family: 'Comfortaa', cursive;
 background-color: transparent;
